--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "expres": "^0.0.5",
+    "express": "^4.18.2",
     "knex": "^2.4.2",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4"
