--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-foodexplorer",
+  "name": "food-explorer-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,11 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "multer": "^1.4.5-lts.1",
+    "pm2": "^5.3.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4"
   },
